2002-07-27  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Add --enable-hbci configure option.

	* src/import-export/hbci/*: More HBCI GUI work. Some druid should
	be visible by now. The code doesn't really do anything so far,
	though.

2002-07-24  Joshua Sled  <jsled@asynchronous.org>

	* src/register/ledger-core/gnc-ledger-display.c
	(gnc_ledger_display_gl): Added filter for template
	transaction-accounts to General Ledger, fixing Bug 86302.

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_check_consistent):
	Changed wording to fix half of Bug 87622 [the other half being
	unreproducible :(].

	* src/gnome/dialog-sx-from-trans.c (sxftd_update_fs): Add support
	for Bi-Weekly to be part of the pull-down; fixes half of
	Bug 88178.

	* src/engine/FreqSpec.c (xaccFreqSpecGetWeekly): Keep the returned
	day-of-week within reasonable bounds.
	(xaccFreqSpecGetFreqStr): s/Anually/Yearly/ [sic] - Bug 88176.

	* src/gnome/glade/sched-xact.glade: Dead-UI
	removal. s/Anually/Yearly/ [sic] - Fixes Bug 88176.

2002-07-24  Joshua Sled  <jsled@asynchronous.org>

	* src/scm/fin.scm: Made the exposed calcualtion functions output
	positive values.

	* src/gnome/window-main.c (gnc_main_window_create_menus): Added
	accelerators to SX-related menu items.

	* src/gnome/druid-loan.c: Primary change: actually create the
	Scheduled Transactions which are setup by the user.  Miscellaneous
	other cleanups, text, layout and consistency changes.

	* src/gnome/dialog-sxsincelast.c: Support handling of the
	instance-count in forward-looking transaction creation.  Simplfied
	some of the internal data-representation regarding lists of items
	to be created [removed autoCreateTuple, now uses toCreateTuple].
	Removed some DEBUGging output.  Handles setting up the implicit
	'i' variable.

	* src/gnome/dialog-sx-from-trans.c (sxftd_compute_sx): Create SXes
	with an appropriate initial instance-count value.
	
	* src/gnome/dialog-scheduledxaction.c