@@ -5,13 +5,9 @@
 ;;  Copyright (c) 2002 Christian <Stimming@tuhh.de>
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-(define-module (gnucash import-export hbci))
-
-(use-modules (gnucash main))
-
 (define (add-hbci-menu-items)
   (gnc:add-extension 
-   (gnc:make-menu "HBCI" (list "_Tools" )))
+   (gnc:make-menu "HBCI" (list "_Tools" "")))
 
 
   (gnc:add-extension
@@ -19,11 +15,11 @@
 		       (N_ "Initial HBCI Setup")
 		       (list "_Tools" "HBCI" "")
 		       (lambda ()
-			 (gnc:hbci-initial-setup))))
+			 (gnc:hbci-initial-setup)))))
   ;;(gnc:add-extension
   ;; (gnc:make-menu-item (N_ "Finish HBCI Setup")
   ;;	       (N_ "Finish HBCI Setup")
-  ;;	       (list "_Tools" "HBCI" "")
+  ;;	       (list "Tools" "HBCI" "")
   ;;	       (lambda ()
   ;;		 (gnc:hbci-finish-setup)))))
 
